<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/menu_principal"
        android:title="@string/principal"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_hoteles"
        android:title="@string/hoteles"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_bares"
        android:title="@string/bares"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_demografia"
        android:title="@string/demografia"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_acercade"
        android:title="@string/acerca"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>