<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luiseps.turismo_valledupar.sitios">



    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/acordeon"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/rompoidelaacordeon5rk"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/acordeon_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/parque"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/parque"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/parque_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hurtado"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/hurtado"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hurtado_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alfonso"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/alfonso"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alfonso_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>

</LinearLayout>
</ScrollView>