<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.luiseps.turismo_valledupar.hoteles">

    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/sonesta"
      android:textSize="19sp"
      android:gravity="center"
      android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/sonesta"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sonesta_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sicarare"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/sicarare"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sicarare_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hilton"
        android:textSize="19sp"
        android:gravity="center"
        android:textColor="@color/deeppink"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:src="@drawable/hilton"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/hilton_text"
        android:textSize="19sp"
        android:gravity="center"
        android:shadowColor="@color/aqua"/>
    </LinearLayout>
</ScrollView>