<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.luiseps.turismo_valledupar.bares">



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cantores"
                android:textSize="19sp"
                android:gravity="center"
                android:textColor="@color/deeppink"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/cantores"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cantores_text"
                android:textSize="19sp"
                android:gravity="center"
                android:shadowColor="@color/aqua"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ksa"
                android:textSize="19sp"
                android:gravity="center"
                android:textColor="@color/deeppink"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/kasaclub"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ksa_text"
                android:textSize="19sp"
                android:gravity="center"
                android:shadowColor="@color/aqua"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kankurua"
                android:textSize="19sp"
                android:gravity="center"
                android:textColor="@color/deeppink"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/kankurua"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kankurua_text"
                android:textSize="19sp"
                android:gravity="center"
                android:shadowColor="@color/aqua"/>
        </LinearLayout>
</ScrollView>