<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.luiseps.turismo_valledupar.MainActivity">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="@color/deeppink"
                android:textSize="30sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/valledupar"
                    android:layout_weight="1"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textSize="14sp"
                    android:textColor="@color/slategray"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro2"
                    android:textSize="14sp"
                    android:textColor="@color/slategray"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro3"
                    android:textSize="14sp"
                    android:textColor="@color/slategray"
                    android:layout_weight="1"/>


    </LinearLayout>
</ScrollView>